// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetProgressIcon matches custom props snapshot 1`] = `
<div
  class="card text-white bg-info"
  iconclasses="icon-custom"
>
  <div
    class="card-body"
  >
    <!---->
     
    <div
      class="h4 mb-0"
    >
      test
    </div>
     
    <small
      class="text-muted text-uppercase font-weight-bold"
    >
      
      test
    
    </small>
     
    <div
      class="progress-xs my-3 mb-0 progress progress-white"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="35"
        class="progress-bar"
        role="progressbar"
        style="width: 35%;"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`CWidgetProgressIcon matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body"
  >
    <!---->
     
    <!---->
     
    <!---->
     
    <div
      class="progress-xs my-3 mb-0 progress"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="progress-bar"
        role="progressbar"
        style="width: 25%;"
      >
        
      </div>
    </div>
  </div>
</div>
`;
